--- a/app/src/main/res/layout/fragment_main_activity.xml
+++ b/app/src/main/res/layout/fragment_main_activity.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.pinder.app.MainFragment">
+    tools:context="com.pinder.app.Home.MainFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
