--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.pinder.app.MainFragment"
+        android:name="com.pinder.app.Home.MainFragment"
         android:label="fragment_main_activity"
         tools:layout="@layout/fragment_main_activity" >
         <action
