--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -61,7 +61,7 @@
     <LinearLayout
         android:id="@+id/sendLayout"
         android:layout_width="match_parent"
-        android:layout_height="50sp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_weight="1"
         android:orientation="horizontal">
