--- a/app/src/main/res/layout/activity_pop.xml
+++ b/app/src/main/res/layout/activity_pop.xml
@@ -26,4 +26,14 @@
         android:padding="10sp"
         android:src="@drawable/profile_default" />
 
+    <TextView
+        android:id="@+id/nameTextView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="3"
+        android:gravity="center"
+        android:text="Name"
+        android:textColor="@android:color/black"
+        android:textSize="30sp" />
+
 </LinearLayout>
