--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -16,7 +16,7 @@
     <item
         android:id="@+id/nav_main"
         android:icon="@drawable/ic_main_black_24dp"
-        android:title="Main"
+        android:title="Home"
         />
     <item
         android:id="@+id/nav_matches"
