--- a/app/src/main/res/layout/fragment_main_activity.xml
+++ b/app/src/main/res/layout/fragment_main_activity.xml
@@ -60,7 +60,7 @@
             android:layout_height="75sp"
             android:layout_weight="1"
             android:paddingLeft="50sp"
-            android:src="@drawable/dislike"
+            android:src="@drawable/ic_dislike"
             android:text="DISLIKE" />
 
         <ImageView
@@ -69,7 +69,7 @@
             android:layout_height="75sp"
             android:layout_weight="1"
             android:paddingRight="50sp"
-            android:src="@drawable/like"
+            android:src="@drawable/ic_like"
             android:text="LIKE" />
     </LinearLayout>
 </LinearLayout>
