--- a/app/src/main/res/layout/fragment_matches.xml
+++ b/app/src/main/res/layout/fragment_matches.xml
@@ -18,9 +18,9 @@
             android:layout_marginTop="10sp"
             android:layout_marginBottom="10sp"
             android:padding="4sp"
-            android:src="@drawable/location"
+            android:src="@drawable/ic_world"
             android:text="LOC" />
-
+        <!--            android:src="@drawable/location"-->
         <Button
             android:id="@+id/allMatches"
             android:layout_width="wrap_content"
