--- a/app/src/main/res/layout/item_tags_manager.xml
+++ b/app/src/main/res/layout/item_tags_manager.xml
@@ -45,5 +45,5 @@
         android:layout_width="22sp"
         android:layout_height="22sp"
         android:layout_marginRight="5sp"
-        android:src="@drawable/delete_tag" />
+        android:src="@drawable/ic_close_black_24dp" />
 </LinearLayout>
