--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -36,7 +36,7 @@
                 android:layout_marginStart="10sp"
                 android:layout_marginLeft="50dp"
                 android:padding="5sp"
-                android:src="@drawable/profile_default" />
+                android:src="@drawable/ic_profile_hq" />
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
 
