--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -29,7 +29,7 @@
             android:layout_width="75sp"
             android:layout_height="75sp"
             android:padding="10sp"
-            android:src="@drawable/profile_default" />
+            android:src="@drawable/ic_profile_hq" />
 
         <TextView
             android:id="@+id/MatchName"
