--- a/app/src/main/res/layout/item_matches.xml
+++ b/app/src/main/res/layout/item_matches.xml
@@ -10,7 +10,7 @@
         android:id="@+id/MatchImage"
         android:layout_width="55sp"
         android:layout_height="55sp"
-        android:src="@drawable/picture_default"
+        android:src="@drawable/ic_profile_hq"
         app:civ_border_width="3dp" />
 
     <LinearLayout
