--- a/app/src/main/res/layout/activity_fill_info.xml
+++ b/app/src/main/res/layout/activity_fill_info.xml
@@ -94,5 +94,5 @@
         android:layout_gravity="bottom|center"
         android:layout_weight="0"
         android:paddingTop="20sp"
-        android:src="@drawable/login_photo" />
+        android:src="@drawable/ic_logovector" />
 </LinearLayout>
