--- a/app/src/main/res/layout/activity_main_pop_up.xml
+++ b/app/src/main/res/layout/activity_main_pop_up.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/pop_bg"
     android:orientation="vertical"
-    tools:context="com.pinder.app.PopActivity">
+    tools:context="com.pinder.app.MainPopUpActivity">
 
     <TextView
         android:id="@+id/topTextView"
