--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -9,7 +9,7 @@
         android:id="@+id/mainFragment"
         android:name="com.pinder.app.ui.MainFragment"
         android:label="fragment_main_activity"
-        tools:layout="@layout/fragment_main_activity" >
+        tools:layout="@layout/fragment_main" >
         <action
             android:id="@+id/action_mainFragment_to_profileFragment"
             app:destination="@id/profileFragment" />
