--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -65,8 +65,8 @@
 
             <Button
                 android:id="@+id/restartMatches"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0sp"
+                android:layout_height="0sp"
                 android:layout_gravity="center|bottom"
                 android:layout_marginBottom="10sp"
                 android:background="@drawable/rounded_button"
