Created button to open and close bottom sheet

--- a/app/src/main/res/layout/fragment_tags.xml
+++ b/app/src/main/res/layout/fragment_tags.xml
@@ -77,7 +77,7 @@
             android:id="@+id/bottom_sheet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:behavior_peekHeight="50sp"
+            app:behavior_peekHeight="40sp"
             app:layout_behavior="@string/bottom_sheet_behavior">
 
             <LinearLayout
@@ -87,24 +87,26 @@
                 android:layout_weight="0"
                 android:gravity="bottom"
                 android:orientation="vertical"
-                android:paddingBottom="10sp"
                 android:paddingLeft="10sp"
                 android:paddingRight="10sp">
 
+
+
+                <ImageView
+                    android:id="@+id/bottom_sheet_arrow"
+                    android:layout_width="50sp"
+                    android:layout_height="50sp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_keyboard_arrow_up_24dp" />
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="#EEEAEAEA" />
-
-                <ImageView
-                    android:layout_width="50sp"
-                    android:layout_height="50sp"
-                    android:src="@drawable/ic_logovector" />
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
+
 
                     <EditText
                         android:id="@+id/tagsEditText"
