--- a/app/src/main/res/drawable/ic_arrow_down_48dp.xml
+++ b/app/src/main/res/drawable/ic_arrow_down_48dp.xml
@@ -1,5 +1,5 @@
-<vector android:height="24dp" android:tint="#CE0005"
+<vector android:height="48dp" android:tint="#03DAC6"
     android:viewportHeight="24.0" android:viewportWidth="24.0"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:width="48dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#FF000000" android:pathData="M7.41,7.84L12,12.42l4.59,-4.58L18,9.25l-6,6 -6,-6z"/>
 </vector>
