--- a/app/src/main/res/layout/fragment_tags.xml
+++ b/app/src/main/res/layout/fragment_tags.xml
@@ -3,67 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context="com.pinder.app.ui.TagsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="5sp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingBottom="10sp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:text="My tags: "
-                android:textSize="12sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="22sp"
-                android:layout_weight="1"
-                android:text="Gender: "
-                android:textSize="12sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="17sp"
-                android:layout_weight="1"
-                android:text="Age: "
-                android:textSize="12sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="Distance: "
-                android:textSize="12sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:gravity="right"
-                android:text="Delete: "
-                android:textSize="12sp" />
-        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/tagsRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:paddingBottom="50dp"
+            android:clipToPadding="false"
+            tools:listitem="@layout/item_tags_manager"/>
 
 
     </LinearLayout>
@@ -77,8 +35,30 @@
             android:id="@+id/bottom_sheet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:behavior_peekHeight="40sp"
+            app:behavior_peekHeight="60sp"
+
+
             app:layout_behavior="@string/bottom_sheet_behavior">
+<!--            android:background="#DAFFFFFF"-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:background="@drawable/tags_gradient">
+
+                    <ImageView
+                        android:id="@+id/bottom_sheet_arrow"
+                        android:layout_width="60sp"
+                        android:layout_height="60sp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_add_cyan_48dp"
+                        />
+                </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -88,24 +68,26 @@
                 android:gravity="bottom"
                 android:orientation="vertical"
                 android:paddingLeft="10sp"
-                android:paddingRight="10sp">
+                android:paddingRight="10sp"
+                android:background="#FFFFFF" >
+
+<!--                <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--                    android:id="@+id/floating_bottom_sheet"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:src="@drawable/ic_add_24dp"-->
+<!--                    android:layout_gravity="end" />-->
 
 
-
-                <ImageView
-                    android:id="@+id/bottom_sheet_arrow"
-                    android:layout_width="50sp"
-                    android:layout_height="50sp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_keyboard_arrow_up_24dp" />
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="#EEEAEAEA" />
+                    />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:background="#FFFFFF">
 
 
                     <EditText
@@ -208,6 +190,8 @@
                     app:corner_radius="10"
                     app:position="left" />
             </LinearLayout>
+            </LinearLayout>
+
         </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
