--- a/app/src/main/res/layout/activity_main_fragment_menager.xml
+++ b/app/src/main/res/layout/activity_main_fragment_menager.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fillViewport="true"
     android:orientation="vertical"
-    tools:context="com.pinder.app.MainFragmentMenager">
+    tools:context="com.pinder.app.MainFragmentManager">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
